<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titulo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/titulo_compromisso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_1_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/button_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_data"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:layout_marginRight="20sp"/>

        <Button
            android:id="@+id/button_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_hora"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/edittext_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_compromisso_descricao"
        android:background="@color/white"/>



    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ok"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10sp"/>
</LinearLayout>

</LinearLayout>
